# emporium

./: .env.example  .gitignore  Cargo.toml  rustfmt.toml
core/: Cargo.toml
core/src/: lib.rs
examples/: alphav_demo.rs  cli.rs  kv_demo.rs  polygon_demo.rs
examples/gui_example/: Cargo.toml
examples/gui_example/src/: main.rs
marketplace/kv/rust/: Cargo.toml  build.sh
marketplace/kv/rust/src/: lib.rs
marketplace/kv/rust/wit/: extension.wit
marketplace/xt-alphav/rust/: Cargo.toml  build.sh  manifest.toml
marketplace/xt-alphav/rust/src/: command.rs  lib.rs
marketplace/xt-polygon/rust/: Cargo.toml  build.sh  manifest.toml
marketplace/xt-polygon/rust/src/: bindings.rs  command.rs  lib.rs
marketplace/xt-polygon/rust/wit/: extension.wit
src/: data.rs  error.rs  extension.rs  lib.rs  registry.rs  wasm.rs
wit/: extension.wit
