[package]
name = "emporium"
description = "WASM extension framework for Rust applications"
version = "0.0.1"
edition = "2024"
authors = ["Andy Terra <tech@andyterra.com>"]
license = "MIT"

[workspace]
members = [".", "core", "examples/gui_example"]

[dependencies]
anyhow = "1.0"
emporium-core = { path = "./core" }
futures = { version = "0.3", default-features = false }
polars-core = { version = "0.44", default-features = false }
serde = { version = "1.0.208", features = ["serde_derive"] }
serde_json = "1.0.125"
sipper = "0.1.0"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["fs"] }
toml = "0.9.8"
wasmtime = "27.0"
wasmtime-wasi = "27.0"
wasmtime-wasi-http = "27.0"
wit-bindgen = "0.35"

[build-dependencies]
wasmtime-component-util = "27.0"

[dev-dependencies]
dotenvy = "0.15"

# [patch.crates-io]
# iced.git = "https://github.com/iced-rs/iced.git"
