[package]
name = "xt-alphav"
description = "AlphaVantage market data extension"
version = "0.1.0"
edition = "2024"
authors = ["Andy Terra <andy@andyterra.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.35"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
emporium-core = { git = "https://github.com/inboard-ai/emporium.git", branch = "dev" }
alphav = { git = "https://github.com/inboard-ai/alphav.git", branch = "dev", default-features = false, features = [
    "decoder",
] }
futures = "0.3"

[package.metadata.component]
package = "extension:api"

[package.metadata.component.target]
path = "../../../wit" # path to inboard extension API WIT

# Patch to use local crates for local development
# [patch.'https://github.com/inboard-ai/emporium.git']
# emporium-core = { path = "../../../core" }

# [patch.'https://github.com/inboard-ai/alphav.git']
# alphav = { path = "../../../alphav" }

[workspace]
